--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
         <meta name="msapplication-config" content="%PUBLIC_URL%/favicon/browserconfig.xml" />
         <meta name="theme-color" content="#ffffff" />
 
-        <title>Codies</title>
+        <title>H4Codies</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
